--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,10 @@
 /BookOfIllusions.class
+/ChuckleClicker.class
 /CowTimer.class
 /FortuneTeller.class
 /Jeopardy.class
 /Movie.class
+/NastySurprise.class
 /NetflixQueue.class
 /Recipes.html
 /SimonSays.class
@@ -17,5 +19,4 @@
 /right.jpg
 /up.jpg
 /up2.jpg
-/NastySurprise.class
-/ChuckleClicker.class
+/TypeOrDie.class
